// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test IF statements test common cases 1`] = `
Program {
  "children": Array [
    If {
      "alternate": If {
        "alternate": If {
          "alternate": Block {
            "children": Array [
              Echo {
                "arguments": Array [
                  String {
                    "isDoubleQuote": true,
                    "kind": "string",
                    "raw": "\\"else\\"",
                    "value": "else",
                  },
                ],
                "kind": "echo",
                "shortForm": false,
              },
            ],
            "kind": "block",
          },
          "body": Block {
            "children": Array [
              Echo {
                "arguments": Array [
                  String {
                    "isDoubleQuote": true,
                    "kind": "string",
                    "raw": "\\"2nd\\"",
                    "value": "2nd",
                  },
                ],
                "kind": "echo",
                "shortForm": false,
              },
            ],
            "kind": "block",
          },
          "kind": "if",
          "shortForm": false,
          "test": Boolean {
            "kind": "boolean",
            "raw": "false",
            "value": false,
          },
        },
        "body": Block {
          "children": Array [
            Echo {
              "arguments": Array [
                String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": "\\"false\\"",
                  "value": "false",
                },
              ],
              "kind": "echo",
              "shortForm": false,
            },
          ],
          "kind": "block",
        },
        "kind": "if",
        "shortForm": false,
        "test": Boolean {
          "kind": "boolean",
          "raw": "false",
          "value": false,
        },
      },
      "body": Block {
        "children": Array [
          Echo {
            "arguments": Array [
              String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": "\\"is true\\"",
                "value": "is true",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "kind": "if",
      "shortForm": false,
      "test": Boolean {
        "kind": "boolean",
        "raw": "true",
        "value": true,
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test IF statements test issue #84 1`] = `
Program {
  "children": Array [
    Inline {
      "kind": "inline",
      "raw": "
        ",
      "value": "
        ",
    },
    If {
      "alternate": Block {
        "children": Array [
          Inline {
            "kind": "inline",
            "raw": "
        ",
            "value": "        ",
          },
        ],
        "kind": "block",
      },
      "body": Block {
        "children": Array [
          Inline {
            "kind": "inline",
            "raw": "
        ",
            "value": "        ",
          },
        ],
        "kind": "block",
      },
      "kind": "if",
      "shortForm": true,
      "test": Boolean {
        "kind": "boolean",
        "raw": "true",
        "value": true,
      },
    },
    Inline {
      "kind": "inline",
      "raw": "
      ",
      "value": "      ",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test IF statements test short form 1`] = `
Program {
  "children": Array [
    If {
      "alternate": If {
        "alternate": Block {
          "children": Array [
            Echo {
              "arguments": Array [
                String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": "\\"else\\"",
                  "value": "else",
                },
              ],
              "kind": "echo",
              "shortForm": false,
            },
          ],
          "kind": "block",
        },
        "body": Block {
          "children": Array [
            Echo {
              "arguments": Array [
                String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": "\\"false\\"",
                  "value": "false",
                },
              ],
              "kind": "echo",
              "shortForm": false,
            },
          ],
          "kind": "block",
        },
        "kind": "if",
        "shortForm": true,
        "test": Boolean {
          "kind": "boolean",
          "raw": "false",
          "value": false,
        },
      },
      "body": Block {
        "children": Array [
          Echo {
            "arguments": Array [
              String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": "\\"is true\\"",
                "value": "is true",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "kind": "if",
      "shortForm": true,
      "test": Boolean {
        "kind": "boolean",
        "raw": "true",
        "value": true,
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test IF statements test various cases 1`] = `
Program {
  "children": Array [
    If {
      "alternate": If {
        "alternate": If {
          "alternate": null,
          "body": Block {
            "children": Array [
              Echo {
                "arguments": Array [
                  String {
                    "isDoubleQuote": true,
                    "kind": "string",
                    "raw": "\\"false\\"",
                    "value": "false",
                  },
                ],
                "kind": "echo",
                "shortForm": false,
              },
            ],
            "kind": "block",
          },
          "kind": "if",
          "shortForm": true,
          "test": Boolean {
            "kind": "boolean",
            "raw": "false",
            "value": false,
          },
        },
        "body": Block {
          "children": Array [
            Echo {
              "arguments": Array [
                String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": "\\"false\\"",
                  "value": "false",
                },
              ],
              "kind": "echo",
              "shortForm": false,
            },
          ],
          "kind": "block",
        },
        "kind": "if",
        "shortForm": true,
        "test": Boolean {
          "kind": "boolean",
          "raw": "false",
          "value": false,
        },
      },
      "body": Block {
        "children": Array [
          Echo {
            "arguments": Array [
              String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": "\\"is true\\"",
                "value": "is true",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "kind": "if",
      "shortForm": true,
      "test": Boolean {
        "kind": "boolean",
        "raw": "true",
        "value": true,
      },
    },
    If {
      "alternate": Block {
        "children": Array [
          Echo {
            "arguments": Array [
              String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": "\\"false\\"",
                "value": "false",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "body": Block {
        "children": Array [
          Echo {
            "arguments": Array [
              String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": "\\"is true\\"",
                "value": "is true",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "kind": "if",
      "shortForm": true,
      "test": Boolean {
        "kind": "boolean",
        "raw": "true",
        "value": true,
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
